--- a/lesson_02/brownies.html
+++ b/lesson_02/brownies.html
@@ -1,63 +1,82 @@
-﻿Deep Dish Brownies
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Deep Dish Brownies</title>
+</head>
+<body>
+	<h1>Deep Dish Brownies</h1>
+	<div>
+	<img src="brownies.jpeg"> <!-- hint: <img> tag -->
+	</div>
+	<div>
+	Recipe by: Biz McMahon
+	</div>
+<h2>Related Recipes</h2>
+<ul>	
+	<li>Chewiest Brownies</li>
+	
+	<li>Can't Tell They're Low-fat Brownies</li>
+	
+	<li>Bodacious Brownies</li>
+	
+	<li>Katrina's Best-Ever Chocolate Brownies</li>	
+	<li>Easy Fudge Brownies</li>
+</ul>
 
-brownies.jpeg <!-- hint: <img> tag -->
-
-Recipe by: Biz McMahon
-
-Related Recipes
-
-Chewiest Brownies
-
-Can't Tell They're Low-fat Brownies
-
-Bodacious Brownies
-
-Katrina's Best-Ever Chocolate Brownies
-
-Easy Fudge Brownies
-
-
+<div>
 Prep Time
 60 mins
-
+</div>
+<div>
 Servings
 9
+</div>
+<h2>Ingredients</h2>
+<ul>
+	<li>3/4 cup butter, melted</li>
+	<li>1 1/2 cups white sugar</li>
+	<li>1 1/2 teaspoons vanilla extract</li>
+	<li>3 eggs</li>
+	<li>3/4 cup all-purpose flour</li>
+	<li>1/2 cup unsweetened cocoa powder</li>
+	<li>1/2 teaspoon baking powder</li>
+	<li>1/2 teaspoon salt</li>
+</ul>
 
-Ingredients
-  3/4 cup butter, melted
-	1 1/2 cups white sugar
-	1 1/2 teaspoons vanilla extract
-	3 eggs
-	3/4 cup all-purpose flour
-	1/2 cup unsweetened cocoa powder
-	1/2 teaspoon baking powder
-	1/2 teaspoon salt
+<h2>Directions</h2>
 
-Directions
+<ol>
+	<li>Preheat oven to 350 degrees F (175 degrees C) and Grease an 8 inch square pan.</li>
 
-	Preheat oven to 350 degrees F (175 degrees C) and Grease an 8 inch square pan.
+	<li>In a large bowl, blend melted butter, sugar and vanilla.</li>
 
-	In a large bowl, blend melted butter, sugar and vanilla.
+	<li>Beat in eggs one at a time.</li>
 
-	Beat in eggs one at a time.
+	<li>Combine the flour, cocoa, baking powder and salt. Gradually blend into the egg mixture.</li>
 
-	Combine the flour, cocoa, baking powder and salt. Gradually blend into the egg mixture.
+	<li>Spread the batter into the prepared pan.</li>
 
-	Spread the batter into the prepared pan.
+	<li>Bake in preheated oven for 40 to 45 minutes, or until brownies begin to pull away from the sides of the pan.</li>
 
-	Bake in preheated oven for 40 to 45 minutes, or until brownies begin to pull away from the sides of the pan.
+	<li>Let brownies cool, then cut into squares. Enjoy!</li>
+</ol>
 
-	Let brownies cool, then cut into squares. Enjoy!
-
-
-Tip
-
+<h3>Tip</h3>
+<p>
 Aluminum foil can be used to keep food moist, cook it evenly, and make clean-up easier.
-
-
+</p>
+<div>
 Nutritional Info
-
+</div>
+<div>
 340 cals
+</div>
 
+<span>
+Find this recipe <a href="http://allrecipes.com/recipe/11063/deep-dish-brownies">here</a> 
+</span>
 
-Find this recipe here http://allrecipes.com/recipe/11063/deep-dish-brownies
+</body>
+</html>
