--- a/lesson_02/brownies.html
+++ b/lesson_02/brownies.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>Deep Dish Brownies</h1>
 	<div>
-	<img src="brownies.jpeg"> <!-- hint: <img> tag -->
+	<img src="brownies.png"> <!-- hint: <img> tag -->
 	</div>
 	<div>
 	Recipe by: Biz McMahon
