--- a/lesson_04/backgroundColors/backgroundcolors.html
+++ b/lesson_04/backgroundColors/backgroundcolors.html
@@ -20,7 +20,10 @@ Assignment: Transform my background color changer to look like the colorChanger.
     <ul>
         <li id="turnRed">Turn Red</li>
         <li id="turnBlue">Turn Blue</li>
-        <li id="turnPurple">Turn Purple</li>
+        <li id="turnRandom">Turn Purple</li>
+        <li id="turnYellow">Turn Yellow</li>
+        <li id="turnOrange">Turn Orange</li>
+        <li id="turnGreen">Turn Green</li>
     </ul>
 
 </body>
